# Pixelor

./: .gitignore  CMakeLists.txt  README.md
src/: Histogram.cpp  Histogram.hpp  KMeans.cpp  KMeans.hpp  Main.cpp  Quantization.cpp  Quantization.hpp  Utils.cpp  Utils.hpp
